[gd_scene load_steps=7 format=3 uid="uid://bylgwxigpu3ew"]

[ext_resource type="Script" path="res://scenes/game_main.gd" id="1_43ms6"]
[ext_resource type="Script" path="res://scenes/overall_interface.gd" id="1_jixmc"]
[ext_resource type="PackedScene" uid="uid://bkn6wi713bqe2" path="res://scenes/interface/inventory.tscn" id="2_obl3e"]
[ext_resource type="PackedScene" uid="uid://8m0cv5gae044" path="res://scenes/interface/event_screen.tscn" id="3_o47bj"]
[ext_resource type="PackedScene" uid="uid://b53iq3x8r55uf" path="res://scenes/interface/map_screen.tscn" id="4_2mm1e"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_y3f27"]
size = Vector2(480, 270)

[node name="gameMAIN" type="Node2D"]
script = ExtResource("1_43ms6")

[node name="background" type="Sprite2D" parent="."]
modulate = Color(0.0723416, 0.386168, 0.47078, 1)
position = Vector2(240, 135)
texture = SubResource("PlaceholderTexture2D_y3f27")

[node name="overall_interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
script = ExtResource("1_jixmc")

[node name="global_interface" type="Control" parent="overall_interface"]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 44.0

[node name="inventory_button" type="Button" parent="overall_interface/global_interface"]
layout_mode = 0
offset_left = 320.0
offset_top = 1.0
offset_right = 403.0
offset_bottom = 32.0
text = "inventory"

[node name="map_button" type="Button" parent="overall_interface/global_interface"]
layout_mode = 0
offset_left = 193.0
offset_top = -1.0
offset_right = 236.0
offset_bottom = 30.0
text = "map"

[node name="event_button" type="Button" parent="overall_interface/global_interface"]
layout_mode = 0
offset_left = 88.0
offset_top = 1.0
offset_right = 140.0
offset_bottom = 32.0
text = "event"

[node name="inventory" type="Control" parent="overall_interface"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 30.0
offset_right = 420.0
offset_bottom = 270.0

[node name="inventory" parent="overall_interface/inventory" instance=ExtResource("2_obl3e")]
layout_mode = 1

[node name="map" type="Control" parent="overall_interface"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 30.0
offset_right = 420.0
offset_bottom = 270.0

[node name="map_screen" parent="overall_interface/map" instance=ExtResource("4_2mm1e")]
layout_mode = 1

[node name="event" type="Control" parent="overall_interface"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 30.0
offset_right = 420.0
offset_bottom = 270.0

[node name="event_screen" parent="overall_interface/event" instance=ExtResource("3_o47bj")]
layout_mode = 1

[node name="pldebug" type="Label" parent="overall_interface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="overall_interface/global_interface/inventory_button" to="overall_interface" method="_on_inventory_button_pressed"]
[connection signal="pressed" from="overall_interface/global_interface/map_button" to="overall_interface" method="_on_map_button_pressed"]
[connection signal="pressed" from="overall_interface/global_interface/event_button" to="overall_interface" method="_on_event_button_pressed"]
